Adjust rkward.sf.net / rkward.sourceforge.net urls to their kde.org equivalents.

--- a/README
+++ b/README
@@ -8,5 +8,5 @@ Please see INSTALL for details.
 Getting help / getting involved
 ==================
 
-For contact information, please refer to the rkward website: http://rkward.sourceforge.net
+For contact information, please refer to the rkward website: http://rkward.kde.org
 You may also post all sorts of questions to the main mailing list: rkward-devel AT lists DOT sourceforge DOT net
