--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 rkward (0.6.2z+0.6.3+devel1-1) unstable; urgency=low
   * new upstream release
+  * Ajdust to move of homepage to rkward.kde.org, and vcs to git.kde.org
 
  -- Thomas Friedrichsmeier <tfry@users.sourceforge.net>  Tue, 21 Oct 2014 13:30:00 +0100
 
