--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+- Pluginmap-management was reworked, partially, and moved to Settings->Manage R packages and plugins
+- Provide more detailed information on loaded plugins in rk.list.plugins()
 - Allow to override plugins from a different pluginmap (the plugin with the highest specified version is used)
 - Fixed: Error when using fix() or trace(...edit=TRUE) with default settings on some systems
 - When the RKWard installation has moved on disk, try to adjust stored .pluginmaps paths, accordingly
