--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+- Add R function rk.set.plugin.status() to allow further customization of loaded plugins (hiding of individual menu entries)
   - TODO: With the improved interface to plugins from R, make sure plugins can actually be modified at runtime without crashing (close and re-open them)
 - Pluginmap-management was reworked, partially, and moved to Settings->Manage R packages and plugins
 - Provide more detailed information on loaded plugins in rk.list.plugins()
