--- a/doc/rkwardplugins/index.docbook
+++ b/doc/rkwardplugins/index.docbook
@@ -3069,19 +3069,19 @@ made checkable, thus acting like a simple checkbox at the same time.
 	</varlistentry>
 	<varlistentry>
 	<term><parameter>fixed_width</parameter></term>
-	<listitem><para>Force the GUI element to stay at its initial width. Do not use in combindation with matrices, where the number of columns may change in any way. Useful, esp. when creating a vector input element (rows="1"). (optional, defaults to false).</para></listitem>
+	<listitem><para>Force the GUI element to stay at its initial width. Do not use in combination with matrices, where the number of columns may change in any way. Useful, esp. when creating a vector input element (rows="1"). With this option set to true, no vertical scroll bar will be shown, even in the matrix exceeds the available height (as this would affect the width). (optional, defaults to false).</para></listitem>
 	</varlistentry>
 	<varlistentry>
 	<term><parameter>fixed_height</parameter></term>
-	<listitem><para>Force the GUI element to stay at its initial height. Do not use in combindation with matrices, where the number of rows may change in any way. Useful, esp. when creating a vector input element (columns="1"). (optional, defaults to false).</para></listitem>
+	<listitem><para>Force the GUI element to stay at its initial height. Do not use in combination with matrices, where the number of rows may change in any way. Useful, esp. when creating a vector input element (columns="1"). With this option set to true, no horizontal scroll bar will be shown, even in the matrix exceeds the available width (as this would affect the height). (optional, defaults to false).</para></listitem>
 	</varlistentry>
 	<varlistentry>
 	<term><parameter>horiz_headers</parameter></term>
-	<listitem><para>Strings to ues for the horiztonal header, separated by ";". (optional, defaults to column number).</para></listitem>
+	<listitem><para>Strings to ues for the horiztonal header, separated by ";". The header will be hidden, if set to "". (optional, defaults to column number).</para></listitem>
 	</varlistentry>
 	<varlistentry>
 	<term><parameter>vert_headers</parameter></term>
-	<listitem><para>Strings to ues for the vertical header, separated by ";". (optional, defaults to row number).</para></listitem>
+	<listitem><para>Strings to ues for the vertical header, separated by ";". The header will be hidden, if set to "". (optional, defaults to row number).</para></listitem>
 	</varlistentry>
 	</variablelist></para></listitem>
 </varlistentry>
