Generate files for power analysis plugin

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+- Added power analysis plugin (already existed as separate plugin)
+  - TODO: add automated tests
 - <matrix> element gains options min_rows and min_columns, and the details of fixed_width="true" have been improved
 - Fixed: <valueslot>s were quirky with respect to showing as invalid
 - Fix a hang-on-exit issue
