Adjust rkward-devel mailing list address.

--- a/doc/rkward/index.docbook
+++ b/doc/rkward/index.docbook
@@ -47,7 +47,7 @@ thanks ;-).
 <firstname>Thomas</firstname>
 <surname>Friedrichsmeier</surname>
 <affiliation>
-<address><email>rkward-devel@lists.sourceforge.net</email></address>
+<address><email>rkward-devel@kde.org</email></address>
 </affiliation>
 </author>
 </authorgroup>
