--- a/doc/rkward/man-rkward.1.docbook
+++ b/doc/rkward/man-rkward.1.docbook
@@ -13,7 +13,7 @@
 <surname>Friedrichsmeier</surname>
 <contrib>RKWard man page.</contrib>
 <affiliation>
-<address><email>rkward-devel@lists.sourceforge.net</email></address>
+<address><email>rkward-devel@kde.org</email></address>
 </affiliation>
 </author>
 <date>2014-11-16</date>
