Implement some more string functionality that will be needed for proper i18n of CLT plugins (but should also come in handy, elsewhere) - <label>-element to insert element labels into .rkh pages - <i18n>-element to define a translatable string property - string properties gain modifier "quoted"

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+- New element <i18n> for use in plugins' logic section: Provides a translatable string property
+- New element <label> for use in plugin help pages: Copies the label-attribute of the given element into the text
+- New string property modifier "quoted" to make it easier to quote dynamic strings inside plugins
 - Reworked distribution calculator plugins
 - Added power analysis plugin (already existed as separate plugin)
   - TODO: add automated tests
