--- a/ChangeLog
+++ b/ChangeLog
@@ -32,29 +32,7 @@
 - Fixed potential crash while the "RKWard Debug Messages" window is visible
 - Fixed display of file paths containing non-ascii characters in the title bar and startup dialog
 - Fixed some erroneous plugin debug messages
-- IN PROGESS: Allow plugins to be translated
-  + Notes:
-    - Is it a problem to sync KDE_LANG and LANGUAGE? Should that also be set for the backend?
-    - Lifetime of RKMessageCatalogs? Should probably be destructable, at least when reloading pluginmaps. Should be possible to implement in a sane ways 
-      using QSharedPointer magic.
-    - Don't forget to write documentation
-      - Also general documentation for JS-functions is missing!
-    - What should be the policy regarding installing translations (80% criterion)
-    - i18n'ed plugins vs. automated tests
-      - Sure, we can run automated tests under C locale. But it would be nice to have an additional check that translations don't cause
-        any obvious problems.
-        - At least we could check for errors
-        - Perhaps a special diff of the generated R commands, where all quoted strings and comments are stripped?
-
----
-
-Stuff to cherry-pick, in case we want a 0.6.2a-release:
-polypath: 49d7e9a3cf27c5eb0a45e03aa043957b87c4479c
-
-rcmdr: fb19efa6580a198a156b488bed78f641a1d22cba
-and:   619a6764a25fd84e6388a1e0b21953db88325fcc
-
-debug-messages: b0bb24be1239bf52e1299cfb737d2b8b1a5fdc13
+- Plugins and in-application help pages can now be fully translated
 
 --- Version 0.6.2 - Oct-20-2014
 - In data editor, indicate NAs, explicitly
