--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 TODO 0.6.3:
-  - dirselectors on Windows
   - talk to kde-18n-doc
+- Fixed: Hang when trying to select existing directories in file selectors on Windows
 - New element <i18n> for use in plugins' logic section: Provides a translatable string property
 - New element <label> for use in plugin help pages: Copies the label-attribute of the given element into the text
 - New string property modifier "quoted" to make it easier to quote dynamic strings inside plugins
