Fix typos and EBN issues

--- a/doc/rkward/index.docbook
+++ b/doc/rkward/index.docbook
@@ -42,7 +42,7 @@ thanks ;-).
 <title>The RKWard Handbook</title>
 
 <authorgroup>
-<!-- New authors, add youselves here! -->
+<!-- New authors, add yourselves here! -->
 <author>
 <firstname>Thomas</firstname>
 <surname>Friedrichsmeier</surname>
